werk-parser/tests/fail/root_invalid.txt
error: expected statement
 --> INPUT:2:1
  |
2 | foo
  | ^ expected one of `config`, `let`, `task`, or `build` statement
  |
